- Put generate .class files in packages that mirror JSP file heirachy. - Modified JasperLoader accordingly. - Refactor some codes in Jspc and JspCompilationContext to shared more code. - Numerous fixes and mods.
WARNING: All JSP pages need to be recompiled!


git-svn-id: https://svn.apache.org/repos/asf/tomcat@305656 13f79535-47bb-0310-9956-ffa450edef68